2006-10-10  Richard Guenther  <rguenther@suse.de>

PR rtl-optimization/29323
	* except.c (set_nothrow_function_flags): For functions
	that do not bind local bail out early.

	* decl.c (finish_function): Set TREE_NOTHROW only for
	functions that bind local.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117598 138bc75d-0d04-0410-961f-82ee72b054a4